--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -473,7 +473,7 @@ h1.wlc-filltext {
   background-size: cover;
 }
 .about-img-section1 {
-  background-image: url(../img/about/about1.png);
+  background-image: url(../img/author/Author2.jpeg);
   background-size: cover;
   background-position: center;
 }
